--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<html><body>Fatih</body></html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Fatih Ismail Alaydrus | Profile</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    
+    <body>
+        <div class="container" id="bio-ui">
+            <h1 id="nama">Fatih Ismail Alaydrus</h1>
+            <h3 id="npm">1806146953</h3>
+        </div>
+        <div class="container" id="bio-personal">
+            <h2>Hobby</h2>
+            <ul>
+                <li>Eat!</li>
+                <li>Pray!</li>
+                <li>Play!</li>
+            </ul>
+        </div>
+    </body>
+</html>
