--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Fatih Ismail Alaydrus | Profile</title>
+        <title>Fatih | Profile</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    
+
     <body>
         <div class="container" id="bio-ui">
             <h1 id="nama">Fatih Ismail Alaydrus</h1>
