Add README.md, improved HTML

--- a/index.html
+++ b/index.html
@@ -2,22 +2,27 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Fatih | Profile</title>
+        <title>Fatih Alaydrus | Profile</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
     <body>
-        <div class="container" id="bio-ui">
-            <h1 id="nama">Fatih Ismail Alaydrus</h1>
-            <h3 id="npm">1806146953</h3>
+        <div class="container">
+            <div class="nama-npm">
+                <h1 id="nama">Fatih Ismail Alaydrus</h1>
+                <h3 id="npm">1806146953</h3>
+            </div>
+            
         </div>
-        <div class="container" id="bio-personal">
-            <h2>Hobby</h2>
-            <ul>
-                <li>Eat!</li>
-                <li>Pray!</li>
-                <li>Play!</li>
-            </ul>
+        <div class="container">
+            <div class="bio-personal">
+                <h2>Hobby</h2>
+                <ul>
+                    <li>Eat!</li>
+                    <li>Pray!</li>
+                    <li>Play!</li>
+                </ul>
+            </div>
         </div>
         <footer>
         </footer>
