--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         </div>
         <div class="container">
             <div class="bio-personal">
+                <div>
+                    <p>Hi! I'm a young IT enthusiast aiming to become a Data Scientist / Analyst</p>
+                </div>
                 <h2>Hobby</h2>
                 <ul>
                     <li>Eat!</li>
