--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 
     <body>
         <div class="container">
-            <div class="nama-npm">
+            <div class="ui-npm">
+                <img src="./img/fatih.PNG" alt="Fatih's Photo">
                 <h1 id="nama">Fatih Ismail Alaydrus</h1>
                 <h3 id="npm">1806146953</h3>
             </div>
-            
+            <div class="ui-major">
+                <h4>Information Systems Major</h4>
+                <h5>University of Indonesia, 2018</h5>
+            </div>
         </div>
         <div class="container">
             <div class="bio-personal">
