--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <title>Fatih Alaydrus | Profile</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
+        
     </head>
 
     <body>
@@ -29,6 +31,14 @@
                     <li>Pray!</li>
                     <li>Play!</li>
                 </ul>
+            </div>
+        </div>
+        <div class="container">
+            <div class="contacts">
+                <a href="https://instagram.com/fatismw"><img src="" alt="instagram"></a>
+                <a href="https://github.com/fatih-alaydrus"><img src="" alt="github"></a>
+                <a href="https://linkedin.com/in/fatih-alaydrus/"><img src="" alt="linkedin"></a>
+                <a href="mailto:fatih.ismail27@gmail.com"><img src="" alt="email"></a>
             </div>
         </div>
         <footer>
