--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
         
     </head>
 
-    <body>
+    <body class="clearfix">
         <div class="container">
             <div class="ui-npm">
-                <img src="./img/fatih.PNG" alt="Fatih's Photo">
                 <h1 id="nama">Fatih Ismail Alaydrus</h1>
+                <img src="./img/fatih.PNG" alt="Fatih's Photo">
                 <h3 id="npm">1806146953</h3>
-            </div>
-            <div class="ui-major">
                 <h4>Information Systems Major</h4>
                 <h5>University of Indonesia, 2018</h5>
             </div>
@@ -25,23 +23,16 @@
                 <div>
                     <p>Hi! I'm a young IT enthusiast aiming to become a Data Scientist / Analyst</p>
                 </div>
-                <h2>Hobby</h2>
-                <ul>
-                    <li>Eat!</li>
-                    <li>Pray!</li>
-                    <li>Play!</li>
-                </ul>
+                <h2>Hobby: Eat, Pray, Play!</h2>
             </div>
         </div>
         <div class="container">
             <div class="contacts">
-                <a href="https://instagram.com/fatismw"><img src="" alt="instagram"></a>
-                <a href="https://github.com/fatih-alaydrus"><img src="" alt="github"></a>
-                <a href="https://linkedin.com/in/fatih-alaydrus/"><img src="" alt="linkedin"></a>
-                <a href="mailto:fatih.ismail27@gmail.com"><img src="" alt="email"></a>
+                <a href="https://instagram.com/fatismw" target="_blank"><img src="./img/instagram.png" alt="instagram"></a>
+                <a href="https://github.com/fatih-alaydrus" target="_blank"><img src="./img/github.png" alt="github"></a>
+                <a href="https://linkedin.com/in/fatih-alaydrus/" target="_blank"><img src="./img/linkedin.png" alt="linkedin"></a>
+                <a href="mailto:fatih.ismail27@gmail.com"><img src="./img/email.png" alt="email"></a>
             </div>
         </div>
-        <footer>
-        </footer>
     </body>
 </html>
