--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Fatih Alaydrus | Profile</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
-        
+        <link rel="icon" type="image/png" href="favicon.png">
     </head>
 
     <body class="clearfix">
